Integrar avanze del proyecto de IAA en la memoria

--- a/doc/1_Introduccion.tex
+++ b/doc/1_Introduccion.tex
@@ -3,13 +3,20 @@
 \chapter{Introducción}
 
 \section{Identificación del problema}
-El viento es uno de los fenómenos metereológicos más comunes de las zonas costeras de Valparaíso. Sus características afectan distintos aspectos del entorno que influyen en nuestras vidas, como las condiciones del clima, la sensación térmica, algunos desastres naturales, entre otros. Esto atrae el interés de los especialistas, fomentando la investigación para lograr controlar, en cierta medida, las distintas variables que condicionan su comportamiento, de manera de poder predecir los fenómenos subyacentes a este. Más aún, el viento es ampliamente conocido por ser una fuente renovable y poco contaminante de energía, comunmente llamada energía eólica, lo que hace aún más interesante y necesario el estudio de este fenómeno metereológico.\\
-En los últimos años, tanto el gobierno de Chile como la ciudadanía, han mostrado un creciente interés en las fuentes de energías renovables y con mínimo impacto ambiental, por lo que distintos proyectos en la matería han sido llevados a cabo, desde estudios de factibilidad y recopilación de datos hasta el emplazamiento de las primeras centrales de fuentes de energía límpia. El año 2014, el ministerio de energía publicó un extenso reporte acerca de la situación actual del país en materias de energías renovables, en donde se pueden ver distintas proyecciones y estimaciones de implementación de posibles plantas de generación a lo largo del país. \cite{minenergia14}\\
-Cualquiera sea el estudio de las condiciones climáticas del viento para predecir su potencial energético, existen dos variables fundamentales ha considerar para obtener estas predicciones: la velocidad y la dirección del viento. Actualmente, estos datos están disponibles y son obtenidos por diversos centros metereológicos a lo largo del país, en partícular, el servicio metereológico de la Armada de Chile, que cuenta con el equipo necesario para registrar el comportamiento del viento al lo largo de las distintas épocas del año y en diferentes zonas de Chile.\\
-Si bien la obtención de los datos es un paso, para poder obtener información o conocimiento relevante sobre estos (algo más que un promedio, por ejemplo), es necesario generar modelos que permitan ``explicar'' la distribución de datos y de cierta forma predecir el comportamiento futuro del viento. En la literatura, son ampliamente aceptadas la distribución de \emph{Weibull} para modelar el conjunto datos de velocidad y la distribución de Von Mises para el modelo de la dirección del viento. Ambas distribuciones probabilísticas requieren de la determinación de parámetros para que el modelo se ajuste a los datos obtenidos. Comunmente, se utilizan métodos númericos para la determinación de estos parámetros, sin embargo, estudios recientes han demostrado que la utilización de algorítmos basados en la metaheurística \emph{Particle Swarm Optimization} mejoran los parámetros obtenidos por los métodos tradicionales y por ende la aproximación del modelo al comportamiento real.\\ 
+El viento es uno de los fenómenos meteorológicos más comunes de las zonas costeras de Valparaíso. Su presencia incide en distintos aspectos del medio ambiente, como las condiciones del clima, la sensación térmica, algunos desastres naturales, entre otros. Esto atrae el interés de investigadores, lo que ha fomentado
+a lo largo de la historia el estudio de este fenómeno con el fin de poder controlar las variables que condicionan su comportamiento, de manera de poder predecir los fenómenos subyacentes a este.\\ 
+Entre los diversos efectos del viento, uno de los más simples y útiles es su capacidad de mover objetos, lo cual ha permitido al hombre aprovechar esta propiedad para convertir la energía cinética del viento en energía eléctrica. Dicha fuente de energía es conocida como energía eólica, ampliamente calificada como renovable y poco contaminante.\\
+Acorde a esto último, en los últimos años, tanto el gobierno de Chile como la ciudadanía, han mostrado un creciente interés en el uso de las fuentes de energías renovables y con poco impacto ambiental, por lo que distintos proyectos en la materia han sido llevados a cabo, desde estudios de factibilidad y recopilación de datos hasta el emplazamiento de las primeras centrales de fuentes de energía limpia. El año 2014, el ministerio de energía publicó un extenso reporte acerca de la situación actual del país en materias de energías renovables, en donde se pueden ver distintas proyecciones y estimaciones de implementación de posibles plantas de generación a lo largo del país. \cite{minenergia14}\\
+Cualquiera sea el motivo de estudio de las características del viento (en particular el tema energético), existen dos variables fundamentales ha considerar: la velocidad y la dirección del viento. Por lo tanto, es necesario en primera instancia, recopilar mediciones del viento de la zona a estudiar.
+Actualmente estos datos están disponibles y son obtenidos por diversos centros meteorológicos a lo largo del país. Para este proyecto, el servicio meteorológico de la Armada de Chile, que cuenta con el equipo necesario para registrar el comportamiento del viento a lo largo de las distintas épocas del año y en diferentes zonas de Chile, ha dispuesto de los registros del viento en la comuna de Valparaíso de los años 2013, 2014 y 2015.\\
+Con los datos a disposición, es necesario obtener modelos que expliquen la distribución de estos, de manera de poder obtener fácilmente información
+precisa que permita por ejemplo, evaluar el potencial eléctrico de cierta zona \cite{Dabbaghiyan15}. \\ 
+En la literatura, son ampliamente aceptadas la distribución de \emph{Weibull} para modelar el conjunto datos de velocidad y la distribución de Von Mises para el modelo de la dirección del viento. Ambas distribuciones probabilistas requieren de la determinación de parámetros para que el modelo se ajuste a los datos obtenidos. La elección del método para poder encontrar los parámetros de ajustes definirá la calidad de los modelos, por ello, diversas fórmulas han sido presentadas en la literatura, las cuales tienen mayor o menor precisión dependiendo de las características de los datos, la calidad del método o la estrategia utilizada. Comúnmente, se utilizan métodos numéricos para la determinación de estos parámetros, sin embargo, estudios recientes han abordado nuevas estrategias
+utilizando métodos heurísticos, en particular la meta-heurística \emph{Particle Swarm Optimization} (PSO), con la cual se ha logrado mejorar la calidad del modelo para la velocidad del viento, como se expone en un caso de estudio en Brasil  \cite{Carneiro15}, mientras que para la dirección del viento se ha propuesto una forma más sencilla para poder obtener los parámetros de ajuste a través del uso de PSO. La ventaja del uso de PSO es que es un algoritmo de uso general, de fácil implementación, buen tiempo de ejecución y con resultados cercanos al óptimo a encontrar.\\
+Por lo anterior, el trabajo a realizar en este proyecto se basa en validar el uso de PSO para encontrar los parámetros de ajuste de la distribución de Weibull con datos de la zona de la comuna de Valparaíso y abordar la estrategia propuesta por Heckenbergerova et al.\cite{Heckenbergerova15} para el ajuste del modelo de dirección del viento.
 
 \section{Objetivos}
-Aplicar métodos actuales de optimización basados en la metaheurística \emph{Particle Swarm Optimization} para el ajuste de modelos probabilísticos de dirección y velocidad del viento a los datos recopilados del viento en Valparaíso, con el fin de presentar resultados que permitan inferir información precisa acerca de las condiciones de la región para la generación de energía eólica y otras potenciales aplicaciones.
+Aplicar métodos actuales de optimización basados en la meta-heurística \emph{Particle Swarm Optimization} para el ajuste de modelos de dirección y velocidad del viento a los datos recopilados del viento en Valparaíso, con el fin de presentar resultados que permitan inferir información precisa acerca de las condiciones de la región para la generación de energía eólica y otras potenciales aplicaciones.
 
 \subsection{Objetivos específicos}
 \begin{enumerate}
