--- a/doc/bibliography/bibliography.bib
+++ b/doc/bibliography/bibliography.bib
@@ -64,3 +64,9 @@
     publisher={Elsevier Ltd},
     year={2010}
 }
+@article{Dabbaghiyan15,
+    author={Dabbaghiyan, Amir and Fazelpour, Farivar and Abnavim, Mohhamadreza Dehghan and Rosen, Marc a.},
+    title={Evaluation of wind energy potential in province of Bushehr, Iran},
+    publisher={Elsevier Ltd},
+    year={2015}
+}
