--- a/doc/code/pso_code.tex
+++ b/doc/code/pso_code.tex
@@ -4,18 +4,18 @@
 \caption{PSO para el ajuste de los parámetros de la distribución de Weibull}
 \label{alg:pso}
 \begin{algorithmic}
-\Require Datos de frecuencias de velocidades del viento.
-\Ensure Valores para los parámetros $k$ y $c$.
-\State enjambre = inicializar(w,c1,c2)
-\For{$i = 1$ to $Iter_{max}$}
-\For{Each partículas en enjambre}
-    \State actualizarVelocidadPartícula(partícula)
-    \State actualizarPosiciónPartícula(partítucla)
-    \State guardarMejorResultadoPartícula(partícula)
-\EndFor
-\State guardarMejorResultadoGlobal(enjambre)
-\State actualizarParámetros(enjambre)
-\EndFor
-\State retornarMejorResultadoGlobal(enjambre).
+\REQUIRE Datos de frecuencias de velocidades del viento.
+\ENSURE Valores para los parámetros $k$ y $c$.
+\STATE enjambre = inicializar(w,c1,c2)
+\FOR{$i = 1$ to $Iter_{max}$}
+\FOR{Each partículas en enjambre}
+    \STATE actualizarVelocidadPartícula(partícula)
+    \STATE actualizarPosiciónPartícula(partítucla)
+    \STATE guardarMejorResultadoPartícula(partícula)
+\ENDFOR
+\STATE guardarMejorResultadoGlobal(enjambre)
+\STATE actualizarParámetros(enjambre)
+\ENDFOR
+\STATE retornarMejorResultadoGlobal(enjambre).
 \end{algorithmic}
 \end{algorithm}
