--- a/doc/memoria.tex
+++ b/doc/memoria.tex
@@ -16,6 +16,8 @@
 \usepackage{rotating}
 \usepackage{amsfonts}
 \usepackage{hyperref}
+\usepackage{algorithm}
+\usepackage{algorithmic}
 
 \usepackage{tikz}
 \usetikzlibrary{babel,arrows.meta,shapes,arrows}
@@ -67,8 +69,8 @@
 
 \input{1_Introduccion}
 \input{2_Preeliminares}
-%\input{3_Desarrollo}
-%\input{4_Analisis}
+\input{3_Desarrollo}
+\input{4_Analisis}
 
 \bibliographystyle{ieeetr}
 \bibliography{bibliography/images,bibliography/bibliography}
